== Change log

All notable changes to this project will be documented in this file.

The format is based on http://keepachangelog.com/[Keep a Changelog]
and this project adheres to http://semver.org/[Semantic Versioning].

=== [3.0.0] - UNRELEASED
==== Changed
* Bumped [serialport-rs](https://gitlab.com/susurrus/serialport-rs) to 3.0
  serialport-rs 3.0 contains breaking changes.
* Bumped [nix](https://github.com/nix-rust/nix) to 0.11
* `mio-serial` version number will now track upstream serialport-rs.  mio-serial
  is mostly feature complete at this point (at least for *nix) and this should
  help reduce confusion.

=== [0.8.0] - 2018-03-31
==== Changed
* Bumped [serialport-rs](https://gitlab.com/susurrus/serialport-rs) to 2.3

==== Added
* Merged[#5](https://github.com/berkowski/mio-serial/pull/5) @ndusart added `try_clone` implementations as requred
  by the serialport trait as of 2.3
* Closed[#6](https://github.com/berkowski/mio-serial/pull/6) @snorp also drew attention to the `try_clone` addition

=== [0.7.0] - 2018-02-25
==== Changed
* Bumped [serialport-rs](https://gitlab.com/susurrus/serialport-rs) to 2.1

==== Added
* Merged[#4](https://github.com/berkowski/mio-serial/pull/4) @ndusart added windows support!
* Added appveyor config to support new windows impl.

=== [0.6.0] - 2017-11-28
==== Added
* Closed [#3](https://github.com/berkowski/mio-serial/pull/3) Reexport serialport::Error for error handling without importing serialport crate.
  Thanks @Idanko

=== [0.5.0] - 2017-04-15
==== Added
* Added [trust](https://github.com/japaric/trust) based ci

==== Changed 
* Changed license back to MIT now that `serialport-rs` is MPL-2.0
* Bumped `serialport-rs` dependency to 1.0

=== [0.4.0] - 2017-02-13
==== Changed
* Changed to LGPL-3 for compliance with `serialport` dependency.

=== [0.3.0] - 2017-02-13 [YANKED]
==== Added
* Bumped `serialport` dependency to 0.9